GNOME Bugzilla – Bug 682990
Some build warning fixes
Last modified: 2012-09-04 16:27:08 UTC
A -Wformat-security fix, and a deprecated method fix.
Created attachment 222861 [details] [review] afp: Fix error message (-Wformat-security) We need to supply an %s somewhere in here to be secure.
Created attachment 222862 [details] [review] http: Don't use deprecated libsoup methods soup_message_headers_get() has been deprecated in favor of soup_message_headers_get_one().
Review of attachment 222861 [details] [review]: Looks good, we're in String Change Announcement Period, please notify translators there's been a change in translatable string.
Review of attachment 222862 [details] [review]: Right, came across this yesterday as well.
Created attachment 222920 [details] [review] dav: Don't use deprecated libsoup methods One more patch from me
Committed all three patches to git master.