afp: Fix error message (-Wformat-security)

We need to supply an %s somewhere in here to be secure.

https://bugzilla.gnome.org/show_bug.cgi?id=682990

Signed-off-by: Tomas Bzatek <tbzatek@redhat.com>